--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -668,7 +668,7 @@
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Swp-A0-05v">
                                                 <rect key="frame" x="10" y="467.5" width="394" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wG6-fs-U1T">
                                                 <rect key="frame" x="10" y="433.5" width="394" height="24"/>
@@ -903,20 +903,145 @@
                             <constraint firstItem="ViC-wF-yNb" firstAttribute="top" secondItem="ZIz-oq-4W3" secondAttribute="bottom" constant="40" id="042-oF-aZy"/>
                             <constraint firstItem="Ldg-jv-r94" firstAttribute="centerX" secondItem="n95-zZ-ZEr" secondAttribute="centerX" id="6wt-ei-N1y"/>
                             <constraint firstItem="ViC-wF-yNb" firstAttribute="centerX" secondItem="n95-zZ-ZEr" secondAttribute="centerX" id="IuV-uf-hkM"/>
+                            <constraint firstItem="Ldg-jv-r94" firstAttribute="top" secondItem="ViC-wF-yNb" secondAttribute="bottom" constant="90" id="Oq1-Ao-wgI"/>
                             <constraint firstItem="qDh-By-fi4" firstAttribute="leading" secondItem="n95-zZ-ZEr" secondAttribute="leading" id="TWR-k1-UUJ"/>
                             <constraint firstItem="ZIz-oq-4W3" firstAttribute="centerX" secondItem="n95-zZ-ZEr" secondAttribute="centerX" id="iQj-sp-F5P"/>
                             <constraint firstItem="ZIz-oq-4W3" firstAttribute="top" secondItem="n95-zZ-ZEr" secondAttribute="top" constant="215" id="ji9-B8-ib2"/>
                             <constraint firstItem="qDh-By-fi4" firstAttribute="top" secondItem="n95-zZ-ZEr" secondAttribute="top" id="xf8-5T-Jt9"/>
-                            <constraint firstItem="Ldg-jv-r94" firstAttribute="top" secondItem="ViC-wF-yNb" secondAttribute="bottom" constant="90" id="z4g-zJ-bbK"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="emailTextField" destination="ViC-wF-yNb" id="Cy4-nJ-jRu"/>
+                        <segue destination="vPM-Xl-eNY" kind="presentation" identifier="emailToCodeSegue" modalPresentationStyle="fullScreen" id="gLS-G5-wlv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vQr-Ii-ede" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4148" y="-117"/>
+        </scene>
+        <!--Forget Password2 View Controller-->
+        <scene sceneID="vsC-av-OtU">
+            <objects>
+                <viewController id="vPM-Xl-eNY" customClass="ForgetPassword2ViewController" customModule="showapp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bI5-Be-5Hf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Code:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LOd-sZ-XNs">
+                                <rect key="frame" x="20" y="244" width="165" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="7MV-l3-c1n"/>
+                                    <constraint firstAttribute="width" constant="165" id="RVZ-bI-LNP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1i2-1M-JX3">
+                                <rect key="frame" x="20" y="329" width="165" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="7uA-KS-5n6"/>
+                                    <constraint firstAttribute="width" constant="165" id="d2h-th-8gU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirm password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aff-eN-Xmg">
+                                <rect key="frame" x="20" y="414" width="165" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="165" id="B8G-Iq-kd0"/>
+                                    <constraint firstAttribute="height" constant="25" id="nNA-TT-9Mm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="5214" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="igD-s8-aK3">
+                                <rect key="frame" x="205" y="240" width="200" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="0he-XQ-7wg"/>
+                                    <constraint firstAttribute="height" constant="35" id="CWN-lo-77C"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="5214" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m4D-Wy-g34">
+                                <rect key="frame" x="205" y="410" width="200" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="8je-8J-BxU"/>
+                                    <constraint firstAttribute="height" constant="35" id="MTC-VD-TK4"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ezb-UI-FRj">
+                                <rect key="frame" x="0.0" y="44" width="50" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="BDL-Jb-obE"/>
+                                    <constraint firstAttribute="width" constant="50" id="z3g-yy-wE0"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="arrow.left" catalog="system"/>
+                                <connections>
+                                    <action selector="backButton:" destination="vPM-Xl-eNY" eventType="touchUpInside" id="isL-WK-5oo"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oeR-GG-7oU">
+                                <rect key="frame" x="157" y="612" width="100" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="Lid-DV-Vs7"/>
+                                    <constraint firstAttribute="height" constant="50" id="qt9-bg-ldV"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Confirm">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="18"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="confirmButton:" destination="vPM-Xl-eNY" eventType="touchUpInside" id="3eX-d3-76S"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="5214" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9l2-g2-DQb">
+                                <rect key="frame" x="205" y="325" width="200" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="35" id="L9u-IU-bgH"/>
+                                    <constraint firstAttribute="width" constant="200" id="fGe-JJ-kNn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                            </textField>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="CmG-SR-WWA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aff-eN-Xmg" firstAttribute="leading" secondItem="CmG-SR-WWA" secondAttribute="leading" constant="20" id="01u-7l-3a1"/>
+                            <constraint firstItem="9l2-g2-DQb" firstAttribute="leading" secondItem="1i2-1M-JX3" secondAttribute="trailing" constant="20" id="06k-CE-8Ry"/>
+                            <constraint firstItem="1i2-1M-JX3" firstAttribute="leading" secondItem="CmG-SR-WWA" secondAttribute="leading" constant="20" id="ILN-gd-F34"/>
+                            <constraint firstItem="ezb-UI-FRj" firstAttribute="leading" secondItem="CmG-SR-WWA" secondAttribute="leading" id="JfG-LY-GfZ"/>
+                            <constraint firstItem="ezb-UI-FRj" firstAttribute="top" secondItem="CmG-SR-WWA" secondAttribute="top" id="Oef-zd-8FI"/>
+                            <constraint firstItem="1i2-1M-JX3" firstAttribute="top" secondItem="LOd-sZ-XNs" secondAttribute="bottom" constant="60" id="bvq-dW-XsC"/>
+                            <constraint firstItem="LOd-sZ-XNs" firstAttribute="leading" secondItem="CmG-SR-WWA" secondAttribute="leading" constant="20" id="fLm-ws-0H3"/>
+                            <constraint firstItem="aff-eN-Xmg" firstAttribute="top" secondItem="1i2-1M-JX3" secondAttribute="bottom" constant="60" id="jvc-KS-xdl"/>
+                            <constraint firstItem="LOd-sZ-XNs" firstAttribute="top" secondItem="CmG-SR-WWA" secondAttribute="top" constant="200" id="l5q-ZJ-WSY"/>
+                            <constraint firstItem="oeR-GG-7oU" firstAttribute="centerX" secondItem="CmG-SR-WWA" secondAttribute="centerX" id="oUL-Ih-YKN"/>
+                            <constraint firstItem="m4D-Wy-g34" firstAttribute="leading" secondItem="aff-eN-Xmg" secondAttribute="trailing" constant="20" id="qZW-Aj-xLC"/>
+                            <constraint firstItem="9l2-g2-DQb" firstAttribute="top" secondItem="igD-s8-aK3" secondAttribute="bottom" constant="50" id="rAB-X5-ErQ"/>
+                            <constraint firstItem="igD-s8-aK3" firstAttribute="top" secondItem="CmG-SR-WWA" secondAttribute="top" constant="196" id="t2R-Df-kbw"/>
+                            <constraint firstItem="m4D-Wy-g34" firstAttribute="top" secondItem="9l2-g2-DQb" secondAttribute="bottom" constant="50" id="tEx-4Q-O1P"/>
+                            <constraint firstItem="igD-s8-aK3" firstAttribute="leading" secondItem="LOd-sZ-XNs" secondAttribute="trailing" constant="20" id="tXy-dD-CtT"/>
+                            <constraint firstItem="CmG-SR-WWA" firstAttribute="bottom" secondItem="oeR-GG-7oU" secondAttribute="bottom" constant="200" id="ylH-Qo-vG9"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="codeTextField" destination="igD-s8-aK3" id="ZNJ-iO-5ya"/>
+                        <outlet property="confirmPasswordTextField" destination="m4D-Wy-g34" id="ecX-wn-Ugi"/>
+                        <outlet property="passwordTextField" destination="9l2-g2-DQb" id="htM-Lc-MYD"/>
+                        <segue destination="6Ep-DF-EGL" kind="presentation" identifier="forgetPasswordToConnexionSegue" modalPresentationStyle="fullScreen" id="Rm0-cm-YAM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CSP-Gg-Tqa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5228" y="-117"/>
         </scene>
         <!--Profile-->
         <scene sceneID="XWd-BD-luP">
@@ -960,7 +1085,7 @@
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NXI-P0-Kip">
                                                         <rect key="frame" x="0.0" y="50" width="362" height="34"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -2034,7 +2159,7 @@
                                     <constraint firstAttribute="height" constant="40" id="itt-1S-Mau"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="89O-M6-e7d">
                                 <rect key="frame" x="10" y="484" width="394" height="40"/>
@@ -2042,7 +2167,7 @@
                                     <constraint firstAttribute="height" constant="40" id="NOq-Qx-8AR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fAO-hj-nhz">
                                 <rect key="frame" x="16" y="774" width="382" height="50"/>
@@ -2153,7 +2278,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="yRr-5a-V9i"/>
-        <segue reference="Kza-w1-WLq"/>
+        <segue reference="Rm0-cm-YAM"/>
         <segue reference="FdU-sM-cdB"/>
         <segue reference="6ei-Hb-nWL"/>
     </inferredMetricsTieBreakers>
